Correct mobile layout issues

--- a/docroot/src/assets/scss/components/_code.scss
+++ b/docroot/src/assets/scss/components/_code.scss
@@ -12,3 +12,27 @@ codeblock {
 code {
   font-family: monospace;  
 }
+
+.videoWrapper {
+	position: relative;
+	padding-bottom: 56.25%; /* 16:9 */
+	padding-top: 25px;
+	height: 0;
+}
+.videoWrapper iframe {
+	position: absolute;
+	top: 0;
+  left: 0;
+  right: 0;
+  margin-left:auto;
+  margin-right:auto;
+	width: 100%;
+  height: 100%;
+  max-width: 80%;
+  @include breakpoint(medium) {
+    max-width: 100%;
+  }
+  @include breakpoint(small) {
+    max-width: 100%;
+  }
+}
