--- a/docroot/src/assets/scss/components/_spotlight.scss
+++ b/docroot/src/assets/scss/components/_spotlight.scss
@@ -41,7 +41,6 @@
 
 		@include breakpoint(medium) {
 			@include vendor('flex-direction', 'column-reverse');
-			text-align: center;
 
 			.content {
 				@include vendor('flex', '0 1 auto');
